Fixed collapsing grid bug

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -122,7 +122,7 @@
     }
 }
 .grid {
-  overflow: auto;
+  //overflow: auto;
   margin-top: 15px;
 }
 
@@ -131,6 +131,9 @@
     font-size: 2em;
     text-align: center;
     overflow:auto;
+     width: 100%;
+  box-sizing: border-box;
+
     a{
         border:1px solid lighten($link-color, 40%);//$link-hover-color;
         display:inline-block;
